--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="second">
 
               <img src="images/zazo.png" alt="logo">
-             <p>XYZ GOAT FARM IS A FAMILY FARM FOUNDED BY REVENGE MALULEKE AND RONEWA RAMARU, WE OPERATE IN THE HEART OF LIMPOPO PROVINCE, VENDA VUWANI.</p>
+             <p>HIS & HER'S GOAT FARM IS A FAMILY FARM FOUNDED BY REVENGE MALULEKE AND RONEWA RAMARU, WE OPERATE IN THE HEART OF LIMPOPO PROVINCE, VENDA VUWANI.</p>
 
 
 
